--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-offcanvas": "^0.4.1",
+    "bootstrap": "5.0.2",
+    "jalali-moment": "^3.3.10",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
+    "react-calendar-datetime-picker": "^1.5.1",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
+    "react-offcanvas": "^0.4.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
@@ -19,8 +26,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test"
   },
   "eslintConfig": {
     "extends": [
